--- a/cv.html
+++ b/cv.html
@@ -27,6 +27,9 @@
                     <div class="p-card3" style="width: 15%; height: 40%; margin: 1%; display: flex;">
                         pretty
                     </div>
+                    <div class="p-card3" style="width: 15%; height: 40%; margin: 1%; display: flex;">
+                        pretty
+                    </div>
                 </div>
                 <div class="container" style="width: 50%; height: 40%; justify-items: center; justify-content: center; align-items: center;">
                     <h2>Thalles Melo</h2>
