--- a/cv.html
+++ b/cv.html
@@ -16,32 +16,62 @@
                     <h5 class="mode">change mode</h5>
                     <button type="checkbox" class="p-button"><svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><path d="M18.36 6.64a9 9 0 1 1-12.73 0"></path><line x1="12" y1="2" x2="12" y2="12"></line></svg></button>
                 </div>
-                <div class="container" style="width: 100%; height: 30%; display: flex; align-items: center;">
+                <div class="container" style="width: 100%; height: 20%; display: flex; align-items: center;">
                     <img src="thalles pic.jpeg" alt="picture" id="p-image">
-                    <div class="p-card" style="width: 15%; height: 40%; margin: 1%; display: flex">
-                        ich bin
+                    <div class="p-card" style="margin: 1%; display: flex;">
+                        <div class="container" style="margin-right: 0%; margin-left:12%; margin-top: 135%;line-height: 1%; justify-content: center; justify-items: center;">
+                            <h4>Kaffee</h4>
+                            <h5>level-1876</h5>
+                        </div>
                     </div>
-                    <div class="p-card2" style="width: 15%; height: 40%; margin: 1%; display: flex">
-                        sehr sehr
+                    <div class="p-card2" style="display: flex; align-items: center;">
+                        <div class="container" style="margin-right: 0%; margin-left:20%; margin-top: 135%;line-height: 1%; justify-content: center; justify-items: center;">
+                            <h4>Study</h4>
+                            <h5>level-1288</h5>
+                        </div>
                     </div>
-                    <div class="p-card3" style="width: 15%; height: 40%; margin: 1%; display: flex;">
-                        pretty
+                    <div class="p-card3" style="display: flex; align-items: center;">
+                        <div class="container" style="margin-right: 0%; margin-left:5%; margin-top: 110%;line-height: 1%; justify-content: center; justify-items: center;">
+                            <h4>Coding</h4>
+                            <h5>level-978</h5>
+                        </div>
                     </div>
-                    <div class="p-card3" style="width: 15%; height: 40%; margin: 1%; display: flex;">
-                        pretty
+                </div>
+                <div class="container" style="background-color: #7c7c7c2b;border-radius: 30px; display: flex; width: 70%;height: 45%; float:right; align-items: center; margin-top: 8%;">
+                    <div class="container" style="margin-right: 10%; margin-left:10%;">
+
+                    </div>
+                    <div class="container" style="margin-right: 10%; margin-left:10%;">
+
+                    </div>
+                    <div class="container" style="margin-right: 10%; margin-left:10%;">
+
                     </div>
                 </div>
                 <div class="container" style="width: 50%; height: 40%; justify-items: center; justify-content: center; align-items: center;">
                     <h2>Thalles Melo</h2>
                     <h5>Software engineer student</h5>
+                    <div class="container" id="info" style="background-color: #7c7c7c2b; width: 45%; border-radius: 30px; height: 125%; margin-top: 8%; padding: 10px; font-size: 13.5px; padding-left: 20px;">
+                        <h5>Age: 19 years old</h5>
+                        <h5>Nationality: Brazilian</h5>
+                        <h5>Lenguage levels:</h5>
+                        <h5>-Portuguese: Native Lenguage</h5>
+                        <h5>-English: Advanced</h5>
+                        <h5>-German: Intermediate</h5>
+                        <h5>Hobbies: Art and music</h5>
+                        <h5>Goals: Full-Stack developer</h5>
+                        <h5>Address:</h5>
+                        <h5>-Buochserstrasse 50, 6375 Beckenried</h5>
+                    </div>
+                    <p style="display: flex;margin-top: 10%;">All designed by Thalles</p>
                 </div>
-                <div class="container" style="border-radius: 20px; align-items: center; justify-content: center;background-color: #7c7c7c2b;width: 75%;height: 20%; display: flex; float: right; margin-top: 2%;">
-                    <div class="p-icon" style="width: 10%; height: 45%; margin-left: 5%; display: flex;">
-                        <button>
+                <div class="container" style="border-radius: 20px; align-items: center; justify-content: center;background-color: #7c7c7c2b;width: 70%;height: 20%; display: flex; float: right; margin-top: 2%;">
+                    <div class="p-icon" style="width: 10%; height: 40%; margin-left: 5%; display: flex;">
+                        <button class="insta" onclick=" window.open('https://github.com/Thallesmel','_blank')")>
                         </button>
                     </div>
-                    <div class="p-icon2" style="width: 10%; height: 45%; margin: 10px; display: flex;">
-                        <button class="insta" onclick=" window.open('http://www.instagram.com/thallepp/','_blank')")> Insta
+                    <div class="p-icon2" style="width: 10%; height: 40%; margin: 10px; display: flex;">
+                        <button class="linkedin" onclick=" window.open('http://www.instagram.com/thallepp/','_blank')")>
                         </button>
                     </div>
                     <input type="text" class="p-mess" placeholder="Let your message for me here !!!"></input>
@@ -50,17 +80,18 @@
         </div>
     </div>
     <div class="w-card">
-                <div class="w-weather">
-                    <h2 class="w-city">Weather in Dever</h2>
-                    <h1 class="w-temp">51°C</h1>
-                    <img src="" alt="" class="w-icon"/>
-                    <div class="w-description">CLouds</div>
-                    <div class="w-humidity">Humidity</div>
-                    <div class="w-wind">Wind speed: 6.2 km/h</div>
-                    <div class="w-search">
-                        <input type="text" class="w-search-bar" placeholder="search">
-                        <button class="w-button"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path></svg></button>
-                        </div>
+            <div class="w-weather">
+                <h2 class="w-city">Weather in Dever</h2>
+                <h1 class="w-temp">51°C</h1>
+                <img src="" alt="" class="w-icon"/>
+                <div class="w-description">CLouds</div>
+                <div class="w-humidity">Humidity</div>
+                <div class="w-wind">Wind speed: 6.2 km/h</div>
+                <div class="w-search">
+                    <input type="text" class="w-search-bar" placeholder="search">
+                    <button class="w-button"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path></svg></button>
+            </div>
         </div>
     </div>
+
     
