--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="p-card3" style="display: flex; align-items: center;">
-                        <div class="container" style="margin-right: 0%; margin-left:5%; margin-top: 110%;line-height: 1%; justify-content: center; justify-items: center;">
+                        <div class="container" style="margin-right: 0%; margin-left:5%; margin-top: 135%;line-height: 1%; justify-content: center; justify-items: center;">
                             <h4>Coding</h4>
                             <h5>level-978</h5>
                         </div>
@@ -92,5 +92,5 @@
             </div>
         </div>
     </div>
-
-    
+    <div class="o-card"></div>
+</body>
