--- a/cv.html
+++ b/cv.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="cv.js" defer></script>
     <link rel="stylesheet" href="cv.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
 </head>
 <body>
@@ -92,5 +95,25 @@
             </div>
         </div>
     </div>
-    <div class="o-card"></div>
+    <div class="o-card">
+        <h4 style="position: absolute; top: 1.5%; left: 8%;">More about me</h4>
+        <div class="slides">
+            
+            <div class="slide1">
+                <img class="slideImg" src="/delete/Download.jpg" alt="">
+                <button class="firstButton" onclick="slideDown()"> > </button>
+            </div>
+            <div class="slide2">
+                <img class="slideImg" src="/delete/※⁜૱⛓🎞₶₦௹﷼₾₸č↻↯↭↩↰⇙⇋⇆⇎▫▩▣▥▦▧⇴⇻◀▤∵.jpg" alt="">
+                <button class="secondButton" onclick="slideUp()"> > </button>
+            </div>
+            <div class="slide3">
+                <img class="slideImg" src="/delete/Project Irelia Prestige retake , Chengwei Pan.jpg" alt="">
+                <button class="firstButton" onclick="slideDown()"> > </button>
+                <button class="secondButton" onclick="slideUp()"> > </button>
+            </div>
+    </div>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
