--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h5>Hobbies: Art and music</h5>
                         <h5>Goals: Full-Stack developer</h5>
                         <h5>Address:</h5>
-                        <h5>-Buochserstrasse 50, 6375 Beckenried</h5>
+                        <h5>-Rua Maria Dalina 443, 54315662, Brazil</h5>
                     </div>
                     <p style="display: flex;margin-top: 10%;">All designed by Thalles</p>
                 </div>
