--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
         <div class="slides">
             
             <div class="slide1">
-                <img class="slideImg" src="/br cv i.png" alt="">
+                <img class="slideImg" src="br cv i.png" alt="">
                 <button class="firstButton" onclick="slideDown()"> > </button>
             </div>
             <div class="slide2">
-                <img class="slideImg" src="/schw cv o.png" alt="">
+                <img class="slideImg" src="schw cv o.png" alt="">
                 <button class="secondButton" onclick="slideUp()"> > </button>
             </div>
             <div class="slide3">
-                <img class="slideImg" src="/zdh.png" alt="">
+                <img class="slideImg" src="zdh.png" alt="">
                 <button class="firstButton" onclick="slideDown()"> > </button>
                 <button class="secondButton" onclick="slideUp()"> > </button>
             </div>
